@@ -41,6 +41,7 @@ Version 1.9.9+svn:
    * Added option in advanced preferences that allows the twelve-hour clock
       format to be used
    * Reenabled "delay shroud updates"
+   * Chanaged: Disable pango markup in unit names (bug #17788)
  * WML engine:
    * Readded the liminal alignment
    * Added four-difficulty versions of certain macros: QUANTITY4,
